--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@ body {
 
 .filmstrip {
   display: flex;
-  position: absolute; 
+  position: absolute;  
   display: flex;
   gap: 10px;
   width: max-content;
@@ -376,19 +376,19 @@ body {
 .film-item img {
 
 
-  width: 100%;
-  max-width: 180px;   /* حجم مرن */
+  /*width: 100%;
+  max-width: 180px;  
   height: auto;
   border-radius: 15px;
   object-fit: cover;
-  transition: transform 0.3s ease;
-  gap:10px;
-    /*  width: 100%;
+  transition: transform 0.3s ease;*/
+  
+      width: 100%;
   max-width: 180px;   
   height: auto;
   border-radius: 15px;
   object-fit: cover;
-  transition: transform 0.3s ease; */
+  transition: transform 0.3s ease; 
 }
 
 .hero-overlay {
@@ -1194,6 +1194,7 @@ body {
     margin-bottom: 20px;
   }
   .filmstrip {
+    position: absolute;
     gap: 8px;
   }
 
