--- a/index.html
+++ b/index.html
@@ -88,12 +88,19 @@ body {
   padding: 30px 30px;
 }
 
-.header-content {
+/*.header-content {
   display: flex;
   align-items: center;
   justify-content: space-between;
   gap: 100px;
+}*/
+.header-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
 }
+
 
 .logo {
   display: flex;
@@ -1255,11 +1262,10 @@ body {
   }
 
   .header-content {
-    gap: 5px;
-    display: flex;
-    justify-content: space-between; /* يجعل العناصر في جهتين */
-    align-items: center;
-    flex-wrap: wrap;
+    
+    flex-direction: column;
+    align-items: flex-start;
+  
   }
 
 
@@ -1295,11 +1301,10 @@ body {
   }
 
   .header-content {
-    gap: 5px;
-    display: flex;
-    justify-content: space-between; /* يجعل العناصر في جهتين */
-    align-items: center;
-    flex-wrap: wrap;
+   
+    flex-direction: column;
+    align-items: flex-start;
+  
   }
 
   .logo-text {
