--- a/index.html
+++ b/index.html
@@ -1262,7 +1262,7 @@ body {
   }
 
   .header-content {
-    
+    flex-wrap: nowrap;
    
   }
 
@@ -1300,7 +1300,7 @@ body {
 
   .header-content {
    
-   
+   flex-wrap: nowrap;
   }
 
   .logo-text {
