--- a/index.html
+++ b/index.html
@@ -1267,6 +1267,22 @@ body {
   }
 
 
+.menu-overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.5);
+  z-index: 900;
+  transition: opacity 0.3s ease;
+}
+
+.menu-overlay.active {
+  display: block;
+}
+
 }
 
 .pricing-image img {
@@ -1403,10 +1419,25 @@ body {
                          navMenu.classList.toggle("active")
                            menuToggle.classList.toggle("active")
                              })
+
+
+                        menuToggle.addEventListener("click", () => {
+  navMenu.classList.toggle("active");
+  menuToggle.classList.toggle("active");
+  document.getElementById("menu-overlay").classList.toggle("active");
+});
+
+document.getElementById("menu-overlay").addEventListener("click", () => {
+  navMenu.classList.remove("active");
+  menuToggle.classList.remove("active");
+  document.getElementById("menu-overlay").classList.remove("active");
+});
+
                 </script>
             </div>
         </div>
     </header>
+<div id="menu-overlay" class="menu-overlay"></div>
 
     <!-- Hero Section with Filmstrip Background -->
     <section class="hero">
