--- a/index.html
+++ b/index.html
@@ -1427,7 +1427,7 @@ body {
             </div>
         </div>
     </header>
-<div id="menu-overlay" class="menu-overlay">
+<div id="menu-overlay" class="menu-overlay"></div>
 
     <!-- Hero Section with Filmstrip Background -->
     <section class="hero">
@@ -1837,7 +1837,7 @@ body {
   </footer>
 
 
-</div>
+
 
     <script src="script.js">
         
