--- a/index.html
+++ b/index.html
@@ -1427,7 +1427,25 @@ body {
             </div>
         </div>
     </header>
-<div id="menu-overlay" class="menu-overlay"></div>
+<div id="menu-overlay" class="menu-overlay">
+  <script type="text/javascript">
+    
+  menuToggle.addEventListener("click", () => {
+  navMenu.classList.toggle("active");
+  menuToggle.classList.toggle("active");
+  document.getElementById("menu-overlay").classList.toggle("active");
+});
+
+document.getElementById("menu-overlay").addEventListener("click", () => {
+  navMenu.classList.remove("active");
+  menuToggle.classList.remove("active");
+  document.getElementById("menu-overlay").classList.remove("active");
+});
+    
+  </script>
+
+
+</div>
 
     <!-- Hero Section with Filmstrip Background -->
     <section class="hero">
@@ -1896,17 +1914,6 @@ subscribeBtn.addEventListener("click", () => {
 
 
 
-  menuToggle.addEventListener("click", () => {
-  navMenu.classList.toggle("active");
-  menuToggle.classList.toggle("active");
-  document.getElementById("menu-overlay").classList.toggle("active");
-});
-
-document.getElementById("menu-overlay").addEventListener("click", () => {
-  navMenu.classList.remove("active");
-  menuToggle.classList.remove("active");
-  document.getElementById("menu-overlay").classList.remove("active");
-});
     </script>
 </body>
 </html>
