--- a/index.html
+++ b/index.html
@@ -1415,7 +1415,7 @@ body {
             </div>
         </div>
     </header>
-<div id="menu-overlay" class="menu-overlay">
+<div id="menu-overlay" class="menu-overlay"></div>
 
           <!--    <script type="text/javascript">
                   // Mobile Menu Toggle
@@ -1461,7 +1461,7 @@ body {
   });
 </script>
 
-</div>
+
 
     <!-- Hero Section with Filmstrip Background -->
     <section class="hero">
