--- a/index.html
+++ b/index.html
@@ -1280,8 +1280,9 @@ body, html {
   backdrop-filter: blur(10px);
   flex-direction: column;
   align-items: start;
-  padding: 40px 8px;
+  padding: 40px 15px;
   transition: right 0.3s ease;
+  margin-right: 10px;
 }
 
 .nav-menu.active {
