--- a/index.html
+++ b/index.html
@@ -88,18 +88,18 @@ body {
   padding: 15px 8px;
 }
 
-/*.header-content {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 100px;
-}*/
 .header-content {
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  flex-wrap: wrap;
+  justify-content: space-between;
+
+  gap: 150px;
 }
+/*.header-content {
+    display: flex;
+    justify-content: space-between; 
+    align-items: center;
+}*/
 
 
 .logo {
@@ -1288,7 +1288,7 @@ body, html {
   }
 
   .film-item img {
-    max-width: 120px;
+    max-width: 150px;
     border-radius: 10px;
   }
   .header-actions .btn.btn-primary {
@@ -1318,6 +1318,14 @@ body, html {
 
 .menu-overlay.active {
   display: block;
+}
+
+.header-actions{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  
+  gap: 150px;
 }
 
 }
