--- a/index.html
+++ b/index.html
@@ -1321,11 +1321,10 @@ body, html {
 }
 
 .header-actions{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  margin-left: auto;
+  justify-content: flex-end;
   
-  gap: 150px;
+
 }
 
 }
