--- a/index.html
+++ b/index.html
@@ -1331,6 +1331,27 @@ body, html {
 
 }
 
+.about-visual {
+    padding: 30px 5%;
+  }
+
+  .stats-card {
+    width: 100%;
+    padding: 20px;
+  }
+
+  .stats-number {
+    font-size: 1.6rem;
+  }
+
+  .stats-label {
+    font-size: 0.8rem;
+  }
+
+  .device-image img {
+    max-width: 100%;
+  }
+
 }
 
 .pricing-image img {
@@ -1458,7 +1479,7 @@ body, html {
                     <span></span>
                 </button>
 
-                    
+
                 </div>
 
 
