--- a/index.html
+++ b/index.html
@@ -1166,6 +1166,26 @@ body, html {
     align-items: center;
     gap: 10px;
   }
+
+  .about-visual {
+    flex-direction: column;
+    text-align: center;
+    padding: 50px 8%;
+  }
+
+  .stats-card {
+    width: 80%;
+    margin: 10px auto;
+  }
+
+  .device-image {
+    margin-top: 30px;
+  }
+
+  .google-rating {
+    position: static;
+    margin-top: 20px;
+  }
 }
 
 
@@ -1332,25 +1352,38 @@ body, html {
 }
 
 .about-visual {
-    padding: 30px 5%;
+    flex-direction: column;
+    text-align: center;
+    padding: 40px 6%;
   }
 
   .stats-card {
     width: 100%;
-    padding: 20px;
+    max-width: 400px;
+    margin: 10px auto;
+  }
+
+  .device-image {
+    margin-top: 30px;
+  }
+
+  .google-rating {
+    position: static;
+    margin-top: 20px;
   }
 
   .stats-number {
-    font-size: 1.6rem;
+    font-size: 1.8rem;
   }
 
   .stats-label {
-    font-size: 0.8rem;
+    font-size: 0.85rem;
   }
 
   .device-image img {
     max-width: 100%;
   }
+
 
 }
 
@@ -1425,6 +1458,34 @@ body, html {
   }
   .header-actions .btn.btn-primary {
     display: none;
+  }
+
+   .about-visual {
+    padding: 20px 4%;
+  }
+
+  .stats-card {
+    width: 100%;
+    padding: 18px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+  }
+
+  .stats-number {
+    font-size: 1.4rem;
+  }
+
+  .stats-label {
+    font-size: 0.75rem;
+    letter-spacing: 0.5px;
+  }
+
+  .device-image img {
+    width: 90%;
+    border-radius: 10px;
+  }
+
+  .google-rating {
+    margin-top: 15px;
   }
 }
 
