--- a/index.html
+++ b/index.html
@@ -1353,6 +1353,7 @@ body, html {
 
 .about-visual {
     flex-direction: column;
+    align-items: center;
     text-align: center;
     padding: 40px 6%;
   }
@@ -1363,25 +1364,16 @@ body, html {
     margin: 10px auto;
   }
 
+  /* الصورة تكون أسفل البطاقات */
   .device-image {
+    order: 3;
     margin-top: 30px;
   }
 
   .google-rating {
     position: static;
-    margin-top: 20px;
-  }
-
-  .stats-number {
-    font-size: 1.8rem;
-  }
-
-  .stats-label {
-    font-size: 0.85rem;
-  }
-
-  .device-image img {
-    max-width: 100%;
+    margin-top: 15px;
+    order: 2;
   }
 
 
