--- a/index.html
+++ b/index.html
@@ -1379,12 +1379,12 @@ body, html {
 }
 
 .google-rating {
-    order: 2; /* التقييم ثانياً */
+    order: ; /* التقييم ثانياً */
     margin-top: 15px;
 }
 
 .device-image {
-    order: 3; /* الصورة أخيراً */
+    order: 2; /* الصورة أخيراً */
     margin-top: 20px;
     width: 100%;
     text-align: center;
@@ -1737,9 +1737,9 @@ body, html {
         <span class="stats-label">FIVE STAR REVIEWS</span>
         <span class="stats-number">500K</span>
     </div>
-    <div class="google-rating">
-        <!--<img src="action20.webp" alt="Google"> -->
-    </div>
+  <!--  <div class="google-rating">
+        <img src="action20.webp" alt="Google">
+    </div>  -->
     <div class="device-image">
         <img src="tvremote.jpg" alt="TV Remote">
     </div>
