--- a/index.html
+++ b/index.html
@@ -1379,12 +1379,12 @@ body, html {
 }
 
 .google-rating {
-    order: ; /* التقييم ثانياً */
+    order: 2; /* التقييم ثانياً */
     margin-top: 15px;
 }
 
 .device-image {
-    order: 2; /* الصورة أخيراً */
+    order: 3; /* الصورة أخيراً */
     margin-top: 20px;
     width: 100%;
     text-align: center;
@@ -1736,10 +1736,10 @@ body, html {
     <div class="stats-card stats-card-2">
         <span class="stats-label">FIVE STAR REVIEWS</span>
         <span class="stats-number">500K</span>
-    </div>
-  <!--  <div class="google-rating">
+    </div><!---->
+    <div class="google-rating">
         <img src="action20.webp" alt="Google">
-    </div>  -->
+    </div>  
     <div class="device-image">
         <img src="tvremote.jpg" alt="TV Remote">
     </div>
