--- a/index.html
+++ b/index.html
@@ -1018,6 +1018,7 @@ body, html {
 }
 
 .device-image img {
+  position: relative;
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -1384,6 +1385,7 @@ body, html {
 }
 
 .device-image {
+  position: relative;
     order: 3; /* الصورة أخيراً */
     margin-top: 20px;
     width: 100%;
@@ -1391,6 +1393,7 @@ body, html {
 }
 
 .device-image img {
+  position: relative;
     width: 90%;
     max-width: 400px;
     border-radius: 10px;
@@ -1736,12 +1739,12 @@ body, html {
     <div class="stats-card stats-card-2">
         <span class="stats-label">FIVE STAR REVIEWS</span>
         <span class="stats-number">500K</span>
-    </div><!---->
+    </div>
     <div class="google-rating">
         <img src="action20.webp" alt="Google">
     </div>  
     <div class="device-image">
-        <img src="tvremote.jpg" alt="TV Remote">
+        <img src="tvremote.jpg" alt="TV Remote"><!---->
     </div>
 </div>
             </div>
