--- a/index.html
+++ b/index.html
@@ -1394,7 +1394,6 @@ body, html {
 }
 
 .device-image img {
-  position: relative;
     width: 90%;
     max-width: 400px;
     border-radius: 10px;
@@ -1744,10 +1743,10 @@ body, html {
     <div class="google-rating">
         <img src="action20.webp" alt="Google">
     </div>  
-    <div class="device-image">
-        <img src="tvremote.jpg" alt="TV Remote"><!---->
+  <!--  <div class="device-image">
+        <img src="tvremote.jpg" alt="TV Remote">
     </div>
-</div>
+</div>-->
             </div>
         </div>
     </section>
