--- a/index.html
+++ b/index.html
@@ -1352,52 +1352,6 @@ body, html {
 
 }
 
-.about-visual {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px 4%;
-}
-
-.stats-card {
-    width: 100%;
-    max-width: 400px;
-    padding: 18px;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.08);
-    order: 1; /* البطاقات أولاً */
-    margin: 10px 0;
-}
-
-.stats-number {
-    font-size: 1.4rem;
-    display: block;
-}
-
-.stats-label {
-    font-size: 0.75rem;
-    letter-spacing: 0.5px;
-    display: block;
-}
-
-.google-rating {
-  position: relative;
-    order: 2; /* التقييم ثانياً */
-    margin-top: 15px;
-}
-
-.device-image {
-  position: relative;
-    order: 3; /* الصورة أخيراً */
-    margin-top: 20px;
-    width: 100%;
-    text-align: center;
-}
-
-.device-image img {
-    width: 90%;
-    max-width: 400px;
-    border-radius: 10px;
-}
 
 
 }
@@ -1743,10 +1697,10 @@ body, html {
     <div class="google-rating">
         <img src="action20.webp" alt="Google">
     </div>  
-  <!--  <div class="device-image">
+    <div class="device-image">
         <img src="tvremote.jpg" alt="TV Remote">
     </div>
-</div>-->
+</div><!---->
             </div>
         </div>
     </section>
