--- a/index.html
+++ b/index.html
@@ -1352,6 +1352,72 @@ body, html {
 
 }
 
+.about-visual {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: auto;
+    padding: 20px 4%;
+  }
+
+  .stats-card {
+    position: relative !important;
+    width: 100%;
+    max-width: 400px;
+    padding: 18px;
+    margin: 10px 0;
+    order: 1;
+    top: auto !important;
+    bottom: auto !important;
+    left: auto !important;
+    right: auto !important;
+  }
+
+  .stats-card-1 {
+    order: 1;
+  }
+
+  .stats-card-2 {
+    order: 2;
+  }
+
+  .stats-number {
+    font-size: 1.4rem;
+  }
+
+  .stats-label {
+    font-size: 0.75rem;
+  }
+
+  .google-rating {
+    position: relative !important;
+    order: 3;
+    margin-top: 15px;
+    bottom: auto;
+    right: auto;
+    width: 100%;
+    max-width: 400px;
+    justify-content: center;
+  }
+
+  .device-image {
+    position: relative !important;
+    order: 4;
+    margin-top: 20px;
+    width: 100%;
+    max-width: 400px;
+    height: auto;
+    left: auto;
+    bottom: auto;
+    transform: none;
+  }
+
+  .device-image img {
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+  }
+
 
 
 }
