--- a/index.html
+++ b/index.html
@@ -1356,6 +1356,34 @@ body, html {
 
 }
 
+@media (max-width: 600px) {
+  .stats-card {
+    position: static;
+    width: 100%;
+  }
+
+  .google-rating {
+    position: static;
+    margin-top: 20px;
+  }
+
+  .device-image {
+    position: static;
+    transform: none;
+    width: 80%;
+    height: auto;
+    margin: 0 auto;
+  }
+
+  .about-visual {
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+}
+
+
 .pricing-image img {
     max-width: 100%;  /* تملأ عرض البطاقة بالكامل */
     border-radius: 15px;
