--- a/index.html
+++ b/index.html
@@ -1089,12 +1089,12 @@ body, html {
   }
 
   .stats-card {
-    width: 100%;
-    max-width: 300px;
+    width: 80%;
+    max-width: 200px;
   }
 
   .device-image {
-    width: 90%;
+    width: 80%;
     height: auto;
   }
 
@@ -1844,7 +1844,7 @@ body, html {
         </div>
     </section>
         <span> <h1 class="" style="text-align: center;" >Enjoy watching movies,series,shows,anim and more</h1></span>
-    <section class="hero">
+  <!--  <section class="hero">
       
           
         <div class="filmstrip-container">
@@ -1860,7 +1860,7 @@ body, html {
             </div>
 
            </div>
-    </section>
+    </section>  -->
 
 
     <!-- Pricing Section -->
