--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ body {
   display: flex;
   gap: 10px;
   width: max-content;
-  animation: scroll-left 25s linear infinite;
+  animation: scroll-left 20s linear infinite;
 }
 
 .filmstrip-1 {
@@ -341,14 +341,14 @@ body {
   top: 40%;
   left: 0;
   width: 200%;
-  animation: scroll-right 35s linear infinite;
+  animation: scroll-right 20s linear infinite;
 }
 
 .filmstrip-3 {
   top: 70%;
   left: 0;
   width: 200%;
-  animation: scroll-left 40s linear infinite;
+  animation: scroll-left 20s linear infinite;
 }
 
 @keyframes scroll-left {
@@ -1089,12 +1089,12 @@ body, html {
   }
 
   .stats-card {
-    width: 80%;
+    width: 70%;
     max-width: 200px;
   }
 
   .device-image {
-    width: 80%;
+    width: 70%;
     height: auto;
   }
 
@@ -1514,7 +1514,7 @@ body, html {
     display: none;
   }
 
- .about-visual {
+/* .about-visual {
   position: relative;
     display: flex;
     flex-direction: column;
@@ -1527,7 +1527,7 @@ body, html {
     max-width: 400px;
     padding: 18px;
     box-shadow: 0 4px 12px rgba(0,0,0,0.08);
-    order: 1; /* البطاقات أولاً */
+    order: 1; 
     margin: 10px 0;
 }
 
@@ -1543,12 +1543,12 @@ body, html {
 }
 
 .google-rating {
-    order: 2; /* التقييم ثانياً */
+    order: 2; 
     margin-top: 15px;
 }
 
 .device-image {
-    order: 3; /* الصورة أخيراً */
+    order: 3; 
     margin-top: 20px;
     width: 90%;
     text-align: center;
@@ -1558,7 +1558,7 @@ body, html {
     width: 90%;
     max-width: 400px;
     border-radius: 10px;
-}
+} */
 }
 
 
@@ -1844,7 +1844,7 @@ body, html {
         </div>
     </section>
         <span> <h1 class="" style="text-align: center;" >Enjoy watching movies,series,shows,anim and more</h1></span>
-  <!--  <section class="hero">
+    <section class="hero">
       
           
         <div class="filmstrip-container">
@@ -1860,7 +1860,7 @@ body, html {
             </div>
 
            </div>
-    </section>  -->
+    </section>  
 
 
     <!-- Pricing Section -->
