--- a/index.html
+++ b/index.html
@@ -1086,15 +1086,17 @@ body, html {
   .device-image {
     position: static;
     transform: none;
+    align-items: center;
+    width: 90%;
   }
 
   .stats-card {
-    width: 70%;
-    max-width: 200px;
+    width: 100%;
+    max-width: 300px;
   }
 
   .device-image {
-    width: 70%;
+    width: 80%;
     height: auto;
   }
 
