--- a/index.html
+++ b/index.html
@@ -1282,7 +1282,7 @@ body, html {
   }
 
   .pricing-grid {
-    grid-template-columns: 1fr;
+    grid-template-columns: 3fr;
   }
 
   .pricing {
@@ -1438,6 +1438,44 @@ body, html {
 }
 
 
+  .about-visual {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 25px;
+    min-height: auto;
+    padding: 0 20px; /* إضافة هامش داخلي ليبدو المحتوى أرتب */
+  }
+
+  /* إزالة التموضع المطلق ليصبح التصميم عمودي */
+  .stats-card,
+  .google-rating,
+  .device-image {
+    position: static;
+    transform: none;
+    align-items: center;
+    width: 60%; /* أوسع قليلاً من الهواتف */
+    margin: 0 auto;
+  }
+
+  .stats-card {
+    width: 80%;
+    max-width: 350px; /* أكبر قليلاً للشاشات المتوسطة */
+  }
+
+  .device-image {
+    width: 70%;  /* مناسبة أكثر للتابلت */
+    height: auto;
+  }
+
+  .google-rating {
+    width: auto;
+    margin-top: 15px;
+  
+}
+
+
+
 
 }
 
@@ -1510,7 +1548,7 @@ body, html {
   }
 
   .film-item img {
-    max-width: 90px;
+    max-width: 900px;
     border-radius: 8px;
   }
   .header-actions .btn.btn-primary {
