--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@ body {
 }
 
 .nav-link {
+  display: inline-block;
   color: var(--text-secondary); 
   text-decoration: none;
   font-size: 14px;
@@ -1117,12 +1118,6 @@ body, html {
   transform: scale(1.05);
 }
 
-
-
-/* الشاشات الصغيرة جدًا */
-@media (max-width: 480px) {
- 
-}
 
 
 
