--- a/index.html
+++ b/index.html
@@ -1409,7 +1409,6 @@ body, html {
   display: block;
 }
 
-
 .header-actions{
   order: 2;
   justify-content: flex-end;
@@ -1434,7 +1433,7 @@ body, html {
     position: static;
     transform: none;
     align-items: center;
-    width: 60%; /* أوسع قليلاً من الهواتف */
+    width: 80%; 
     margin: 0 auto;
   }
 
@@ -1444,7 +1443,7 @@ body, html {
   }
 
   .device-image {
-    width: 85%;  /* مناسبة أكثر للتابلت */
+    width: 90%;  /* مناسبة أكثر للتابلت */
     height: auto;
   }
 
@@ -1558,7 +1557,7 @@ body, html {
   }
 
   .device-image {
-    width: 85%; /* أصغر قليلًا لشاشات 480 */
+    width: 90%; /* أصغر قليلًا لشاشات 480 */
     height: auto;
   }
 
