--- a/index.html
+++ b/index.html
@@ -1723,7 +1723,7 @@ body, html {
 
                 <div class="search-bar">
                     <input type="text" placeholder="Search your content here" class="search-input">
-                    <button class="btn btn-primary">Search Now</button>
+                    <button class="rotating-border-btn"><span>  Search Now</span></button>
                 </div>
 
                 <div class="hero-features">
@@ -1850,7 +1850,7 @@ body, html {
         <li>✓ 25,000 worldwide channels 4K</li>
         <li>✓ 500K new and old movies</li>
       </ul>
-      <button class="btn btn-primary">View Content List</button>
+      <button class="rotating-border-btn"><span> View Content List</span></button>
     </div>
   </div>
         </div>
